[package]
name = "plugin-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
blake3 = "1.5.1"
config = { version = "0.14.0", features = ["toml"] }
dashmap = "5.5.3"
flate2 = "1.0.30"
prost = "0.12.6"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
tonic = "0.11.0"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = 'server'
path = 'src/server.rs'

[build-dependencies]
tonic-build = "0.11"
