[package]
name = "plugin_hub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.6.20", features = ["http2", "tokio", "multipart"] }
blake3 = "1.5.1"
bytes = "1.6.0"
config = { version = "0.14.0", features = ["toml"] }
dashmap = "5.5.3"
flate2 = "1.0.30"
globset = "0.4.14"
prost = "0.12.6"
rand = "0.8.5"
serde = "1.0.203"
serde_json = "1.0.117"
tar = "0.4.41"
thiserror = "1.0.61"
tokio = { version = "1", features = ["full"] }
tonic = "0.11.0"
tonic-web = "0.11.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
walkdir = "2.5.0"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = 'server'
path = 'src/server/main.rs'

[build-dependencies]
tonic-build = "0.11"
