[package]
name = "plugin_hub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7.5", features = ["http2", "tokio", "multipart"] }
blake3 = "1.5.1"
bytes = "1.6.0"
dashmap = "6.0.1"
flate2 = "1.0.30"
futures = "0.3.30"
globset = "0.4.14"
prost = "0.13.1"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tar = "0.4.41"
thiserror = "1.0.61"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.11"
tonic = "0.12.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "limit", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
walkdir = "2.5.0"
clap = { version = "4.5.9", features = ["derive"] }
figment = { version = "0.10.9", features = ["toml", "env"] }
shellexpand = "3.1.0"
tempfile = "3.10.1"
reqwest = { version = "0.12.5", features = ["multipart", "blocking"] }

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = 'server'
path = 'src/server/main.rs'

[build-dependencies]
tonic-build = "0.12"


[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
