[package]
name = "sftp-upload-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.20", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml"] }
futures = "0.3.31"
globset = "0.4.15"
opendal = { version = "0.50.0", features = ["services-sftp", "services-fs"] }
serde = { version = "1.0.210", features = ["derive"] }
shellexpand = "3.1.0"
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec", "io"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
